# example-project

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  default.nix
cmake/git_head_reference/: GitHeadReference.cmake
cmake/git_version_info/: GitVersionInfo.cmake
cmake/git_version_info/import/: GitHeadReference.cmake
cmake/version_api/: VersionAPI.cmake
cmake/version_api/import/: GitVersionInfo.cmake
cmake/version_api/include/: version_api.h  version_ct_api.hpp.in
cmake/version_api/src/: version_api.cpp.in
code/hello/: CMakeLists.txt
code/hello/include/: hello.h
code/hello/src/: hello.cpp
code/libPrinter/: CMakeLists.txt  default.nix
code/libPrinter/cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  GitVersionInfo.cmake  VersionAPI.cmake
code/libPrinter/export/: libPrinterConfig.cmake
code/libPrinter/include/printer_lib/: printer.h  version.h  version_ct_api.h.in
code/libPrinter/src/: printer.cpp  version.cpp.in  version_block.cpp.in
scripts/: symlinker.sh
scripts/test/test_generate/: .symlink
test/: CMakeLists.txt
test/src/: test_libPrinter.cpp
